<resources>
    <string name="app_name">PKP Berbasis Zonasi</string>
    <string name="Splash_name">Peningkatan Kompetensi Pembelajaran</string>
    <string name="splash_name_sub">Berbasis Zonasi</string>
    <string name="copyright">Hak Cipta Kementerian Pendidikan dan Kebudayaan, Republik Indonesia © 2019 </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home_title">Beranda</string>
    <string name="notification_title">Notifikasi</string>
    <string name="event_title">Acara</string>
    <string name="account_title">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backdrop_title">Profile Name</string>
    <string name="backdrop_subtitle">usernamenya</string>
    <string name="no_peserta">No. Peserta</string>
    <string name="nuptk">NUPTK</string>
    <string name="golongan_jabatan">Golongan / Jabatan</string>
    <string name="tmp_tgl_lahir">Tempat, Tanggal Lahir</string>
    <string name="kelamin">Kelamin</string>
    <string name="tmp_tugas">Tempat Tugas</string>
    <string name="tugas_mengajar">Tugas Mengajar</string>
    <string name="alamat">Alamat</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tidak_ada_notifikasi">Tidak ada notifikasi</string>
    <string name="acara">Acara</string>
</resources>
