<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.go.kemdikbud.pkpberbasiszonasi.LoginActivity"
    android:background="@color/whiteSmoke">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/whiteSmoke">
        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_kemendikbud"
            android:contentDescription="TODO" />
        <TextView
            android:id="@+id/label_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aplikasi"
            android:layout_marginTop="15dp"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="@color/royalBlue"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_below="@id/logo_app"/>
        <TextView
            android:id="@+id/label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Splash_name"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="@color/goldenRod"
            android:textAllCaps="true"
            android:layout_below="@id/label_aplikasi"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/label_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_name_sub"
            android:layout_below="@+id/label_title"
            android:textSize="11pt"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/label_program"
            android:orientation="vertical">

           <android.support.design.widget.TextInputLayout
               android:id="@+id/layout_username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_edittext"
               android:paddingTop="5dp">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/txt_username"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/username"
                   android:inputType="text"/>

           </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                android:paddingTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/royalBlue"
                android:focusable="true"
                android:clickable="true"
                android:visibility="gone"
                android:text="Masuk"
                android:textColor="@android:color/white"
                />

            <Button
                android:id="@+id/btn_login_simpkb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/royalBlue"
                android:focusable="true"
                android:clickable="true"
                android:text="Masuk"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>